--- a/web.html
+++ b/web.html
@@ -435,12 +435,12 @@ document.write(`
                 <footer class="prev-next-footer">
              <div class="prev-next-area">
     <a class="left-prev"
-       href="web.html"
+       href="intro.html"
        title="previous page">
       <i class="fa-solid fa-angle-left"></i>
       <div class="prev-next-info">
         <p class="prev-next-subtitle">previous</p>
-        <p class="prev-next-title">Vidio pembuatan web statis</p>
+        <p class="prev-next-title">Halaman Utama</p>
       </div>
               
     </a>
