--- a/matriksinverss.html
+++ b/matriksinverss.html
@@ -933,6 +933,15 @@ Notasi:</p>
         <p class="prev-next-title">Matriks</p>
       </div>
     </a>
+    <a class="right-next"
+       href="Determinan.html"
+       title="next page">
+      <div class="prev-next-info">
+        <p class="prev-next-subtitle">next</p>
+        <p class="prev-next-title">&lt;Determinan&gt;</p>
+      </div>
+      <i class="fa-solid fa-angle-right"></i>
+    </a>
 </div>
                 </footer>
               
